x86: Enable SMP support in ranchu defconfigs
QEMU 2.x already supports SMP emulation for x86 and x86_64 guests, so
enable CONFIG_SMP in the kernel to take advantage of that. Note that
for 32-bit x86, this also obsoletes a couple of uniprocessor-specific
options.

Change-Id: I733c65d7197cb9cf2d6b7df6de4ad311daa0cc96
Signed-off-by: Yu Ning <yu.ning@intel.com>

--- a/arch/x86/configs/i386_ranchu_defconfig
+++ b/arch/x86/configs/i386_ranchu_defconfig
@@ -30,12 +30,11 @@ CONFIG_UNIXWARE_DISKLABEL=y
 CONFIG_SGI_PARTITION=y
 CONFIG_SUN_PARTITION=y
 CONFIG_KARMA_PARTITION=y
+CONFIG_SMP=y
 CONFIG_MCORE2=y
 CONFIG_X86_GENERIC=y
 CONFIG_HPET_TIMER=y
 CONFIG_PREEMPT=y
-CONFIG_X86_UP_APIC=y
-CONFIG_X86_UP_IOAPIC=y
 # CONFIG_X86_MCE is not set
 CONFIG_X86_REBOOTFIXUPS=y
 CONFIG_X86_MSR=y
