--- a/arch/x86/configs/x86_64_ranchu_defconfig
+++ b/arch/x86/configs/x86_64_ranchu_defconfig
@@ -36,6 +36,7 @@ CONFIG_UNIXWARE_DISKLABEL=y
 CONFIG_SGI_PARTITION=y
 CONFIG_SUN_PARTITION=y
 CONFIG_KARMA_PARTITION=y
+CONFIG_SMP=y
 CONFIG_MCORE2=y
 CONFIG_PREEMPT=y
 # CONFIG_X86_MCE is not set
